# localscribe-macos

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  playwright.config.js  pyproject.toml
docs/: GITHUB_METADATA.md  LOCAL_RUN_TUTORIAL.md  NATIVE_SYSTEM_AUDIO.md
docs/releases/: v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.2.3.md
native/system-audio-helper/: Package.swift
scripts/: bootstrap-macos.sh
src/localscribe/: __init__.py  audio.py  config.py  main.py  models.py  system_audio.py
src/localscribe/api/: app.py  routes.py  services.py
src/localscribe/context/: __init__.py  service.py
src/localscribe/diarization/: __init__.py  service.py  turns.py  vad.py
src/localscribe/engines/: __init__.py  base.py  faster_whisper.py  mock.py  whisperkit.py  whisperkit_models.py  whisperkit_runtime.py
src/localscribe/exports/: __init__.py  render.py
src/localscribe/postprocess/: __init__.py  service.py
src/localscribe/speakers/: __init__.py  resolver.py
src/localscribe/static/: app.js  index.html  styles.css
src/localscribe/storage/: __init__.py  file_store.py  session_store.py
src/localscribe/streaming/: __init__.py  models.py  service.py
tests/: test_api_routes.py  test_audio.py  test_context_refinement.py  test_exports.py  test_post_processing.py  test_session_store.py  test_speaker_resolver.py  test_streaming_service.py  test_system_audio_service.py  test_turn_segmenter.py  test_vad_refinement.py  test_whisperkit_engine.py  test_whisperkit_runtime.py
tests/e2e/: edge-smoke.spec.js  editable-transcript.spec.js
(+1 files in other folders)
